--- a/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/SysMaintenance/frmInstruMaintenance.resx
+++ b/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/SysMaintenance/frmInstruMaintenance.resx
@@ -3529,7 +3529,7 @@
     <value>20, 210</value>
   </data>
   <data name="Hitstop" xml:space="preserve">
-    <value>移管手在管架向清洗盘取放管处抓管发生撞管，实验将进行停止！</value>
+    <value>移管手在暂存盘向清洗盘取放管处抓管发生撞管，实验将进行停止！</value>
   </data>
   <data name="chbPmt.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -4004,7 +4004,7 @@
   <data name="numDwPourin.TabIndex" type="System.Int32, mscorlib">
     <value>76</value>
   </data>
-  <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <data name="$this.Localizable" type="System.Boolean, mscorlib">
     <value>True</value>
-  </metadata>
+  </data>
 </root>
