--- a/BioBaseCLIA(BKI1100)_新台式/BioBaseCLIA/frmMain.en.resx
+++ b/BioBaseCLIA(BKI1100)_新台式/BioBaseCLIA/frmMain.en.resx
@@ -2569,4 +2569,7 @@
   <data name="Wastenormal" xml:space="preserve">
     <value>Waste liquid bucket is normal</value>
   </data>
+  <data name="$this.ToolTip" xml:space="preserve">
+    <value />
+  </data>
 </root>
