--- a/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/InfoSetting/frmInfo.en.resx
+++ b/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/InfoSetting/frmInfo.en.resx
@@ -2496,7 +2496,7 @@
     <value>Type:</value>
   </data>
   <data name="Modify" xml:space="preserve">
-    <value>Modify</value>
+    <value>Edit</value>
   </data>
   <data name="Normal" xml:space="preserve">
     <value>Normal</value>
