--- a/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/frmMain.en.resx
+++ b/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/frmMain.en.resx
@@ -2293,4 +2293,7 @@
         //////////////////////////////////8=
 </value>
   </data>
+  <data name="AccessInterruption" xml:space="preserve">
+    <value>Please reconfirm the connection and restart the instrument and software</value>
+  </data>
 </root>
